--- a/Homeworks/Homework-4/index.html
+++ b/Homeworks/Homework-4/index.html
@@ -35,6 +35,31 @@
 			</div>
 			<div class="content">
 
+				<div class="movie-list">
+					<div class="movie-list--item">
+						<div class="movie-list--item-overlay">
+							<a href="#" class="movie-list--item-more"></a>
+						</div>
+						<div class="movie-list--item-image" style="background-image: url(images/bond.png);"></div>
+
+						<div class="movie-list--item-head">
+							<div class="movie-list--item-title">Не время умирать (2021)</div>
+							<div class="movie-list--item-subtitle">No Time to Die</div>
+							<div class="movie-list--item-wrapper"></div>
+						</div>
+
+						<div class="movie-list--item-description">Джеймс Бонд оставил оперативную службу и наслаждается спокойной жизнью на Ямайке. Все меняется, когда на острове появляется его старый друг Феликс Лейтер из ЦРУ с просьбой о помощи.</div>
+
+						<div class="movie-list--item-bottom">
+							<div class="movie-list--item-time">
+								<div class="movie-list--list-time--icon"></div>
+								163 мин.</div>
+							<div class="movie-list--item-info">БОЕВИК,ТРИЛЛЕР,ПРИКЛЮЧЕНИЯ</div>
+						</div>
+
+					</div>
+				</div>
+
 			</div>
 		</div>
 
